--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="ventronElectron">
+<html ng-app="leitorEstoque">
   <head>
     <meta charset="UTF-8">
     <title>Tutorial Electron - Ventron - Vitor Silva!</title>
@@ -20,9 +20,9 @@
   <script src="./bower_components/angular-animate/angular-animate.min.js"></script>
   <script src="./bower_components/angular-material/angular-material.min.js"></script>   
   <script src="./bower_components/angular-route/angular-route.min.js"></script>  
-
   <script src="./app/app.js"></script>
   <script src="./app/config.js"></script>
+  <script src="./app/services.js"></script>
   <script src="./app/features/home/home.controller.js"></script>
   
 </html>
