--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -25,29 +25,26 @@
             <span>{{vm.servico.transito.ID_TRANSITO?vm.servico.transito.ID_TRANSITO:vm.servico.ordem.ID_OS?'OS'+vm.servico.ordem.ID_OS:''}}</span>
         </md-whiteframe>
         <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="35" flex-gt-md="25" layout layout-align="center center">
-            <span class="label">ID</span>
-            <span>{{vm.servico.pacote.ID_PRODUTO}}</span>
-        </md-whiteframe>
-        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="35" flex-gt-md="25" layout layout-align="center center">
             <span class="label">USUÁRIO</span>
             <span>{{vm.servico.operador.NOME | uppercase}}</span>
         </md-whiteframe>
         <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="35" flex-gt-md="25" layout layout-align="center center">
-            <span class="label">QUANTIDADE</span>
-            <span>{{vm.servico.pacote.SITUACAO}}</span>
-        </md-whiteframe>
-        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="35" flex-gt-md="25" layout layout-align="center center">
-            <span class="label">UNIDADE</span>
+            <span class="label">ENDERECO</span>
             <span>{{vm.servico.endereco.CODBAR}}</span>
         </md-whiteframe>
         <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="35" flex-gt-md="25" layout layout-align="center center">
-            <span class="label">UNIDADE</span>
-            <span>{{vm.servico.pacote.SITUACAO}}</span>
+            <span class="label">ID</span>
+            <span>{{vm.servico.pacote.ID_PRODUTO}}</span>
         </md-whiteframe>
-        <md-whiteframe ng-if="!vm.servico.erro.message" class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="35" flex-gt-md="25" layout layout-align="center center">
+        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="35" flex-gt-md="25" layout layout-align="center center">
+            <span class="label">QTD | UN</span>
+            <span>{{vm.servico.pacote.QTD}} {{vm.servico.pacote.UNIDADE}}</span>
+        </md-whiteframe>
+        <md-whiteframe ng-if="!vm.servico.erro.message" class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="35" flex-gt-md="90" layout layout-align="center center">
+            <span class="label">DESCRIÇÃO</span>         
             <span>{{vm.servico.pacote.DESCRICAO}}</span>
         </md-whiteframe>
-        <md-whiteframe ng-if="vm.servico.erro.message" class="md-whiteframe-1dp md-warn" flex-sm="45" flex-gt-sm="35" flex-gt-md="25" layout layout-align="center center">
+        <md-whiteframe ng-if="vm.servico.erro.message" class="md-whiteframe-1dp md-warn" flex-sm="45" flex-gt-sm="35" flex-gt-md="90" layout layout-align="center center">
             <span>{{vm.servico.erro.message}}</span>
         </md-whiteframe>
     </md-content>
