--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="leitorEstoque">
   <head>
     <meta charset="UTF-8">
-    <title>Tutorial Electron - Ventron - Vitor Silva!</title>
+    <title>Leitor Estoque 2.0</title>
     <link rel="stylesheet" href="./bower_components/angular-material/angular-material.css">
     <link rel="stylesheet" href="./style.css">
   </head>
