--- a/app/features/home/home.mdl.peso.html
+++ b/app/features/home/home.mdl.peso.html
@@ -2,15 +2,15 @@
     <form ng-submit="ok(volume)" name='controle' ng-cloak>
       <md-toolbar>
         <div class="md-toolbar-tools">
-          <h2>LEIA A ETIQUETA DA QUEBRA</h2>
+          <h2>Digite o peso Para fechar o Volume</h2>
           <span flex></span>
         </div>
       </md-toolbar>
       <md-dialog-content>
         <div class="md-dialog-content">
             <md-input-container class="md-block">
-                <label>Etiqueta</label>
-                <input required md-no-asterisk name="description" ng-model="volume.CODBAR" md-autofocus>
+                <label>Peso</label>
+                <input required md-no-asterisk type="number" name="description" ng-model="volume.PESO" md-autofocus>
                 <div ng-messages="controle.description.$error" >
                   <div ng-message="required">falta valor</div>
                 </div>
@@ -19,9 +19,6 @@
       </md-dialog-content>
       <md-dialog-actions layout="row">
         <input class='hide' type='submit' value='enviar' />
-        <md-button>
-          REIMPRIME
-        </md-button>
       </md-dialog-actions>
     </form>
   </md-dialog>
