--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -1,5 +1,5 @@
 <section layout="column" flex layout-align="center center" id="leitor" class="login" ng-cloak>
-    <md-content layout-padding layout-fill>
+    <md-content layout-padding layout-fill layout-align="center center">
         <form name="projectForm" ng-submit="vm.consultaPacote(consulta.input);consulta.input=''" method="POST">
             <md-input-container class="md-block">
                 <label>LEITOR</label>
@@ -12,40 +12,44 @@
 
         </form>
     </md-content>
-    <md-content layout="row" layout-padding layout-wrap layout-fill style="padding-bottom: 32px;">
-        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="35" flex-gt-md="25" layout layout-align="center center">
+    <md-content layout="row" layout layout-wrap layout-align="center center" layout-fill style="padding-bottom: 32px;">
+        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="15" flex-gt-md="25" layout layout-align="center center">
             <span class="label">DATA</span>
             <span>{{ vm.clock.time | date:' dd/MM/yy'}}</span>
         </md-whiteframe>
-        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="35" flex-gt-md="25" layout layout-align="center center">
+        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="15" flex-gt-md="25" layout layout-align="center center">
             <span class="label">HORA</span>
             <span>{{ vm.clock.time | date:'HH:mm:ss'}}</span>
         </md-whiteframe>
-        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="35" flex-gt-md="25" layout layout-align="center center">
+        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="30" flex-gt-md="25" layout layout-align="center center">
+            <span class="label">USUÁRIO</span>
+            <span>{{vm.servico.operador.NOME | uppercase}}</span>
+        </md-whiteframe>        
+        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="30" flex-gt-md="25" layout layout-align="center center">
             <span class="label">DOCUMENTO</span>
             <span>{{vm.servico.transito.ID_TRANSITO?vm.servico.transito.ID_TRANSITO:vm.servico.ordem.ID_OS?'OS'+vm.servico.ordem.ID_OS:''}}</span>
         </md-whiteframe>
-        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="35" flex-gt-md="25" layout layout-align="center center">
-            <span class="label">USUÁRIO</span>
-            <span>{{vm.servico.operador.NOME | uppercase}}</span>
-        </md-whiteframe>
-        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="35" flex-gt-md="25" layout layout-align="center center">
+        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="25" flex-gt-md="25" layout layout-align="center center">
             <span class="label">{{vm.servico.volume.CODBAR?'VOLUME':'ENDERECO'}}</span>
             <span>{{vm.servico.endereco.CODBAR || vm.servico.volume.CODBAR}}</span>
         </md-whiteframe>
-        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="35" flex-gt-md="25" layout layout-align="center center">
+        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="20" flex-gt-md="25" layout layout-align="center center">
+            <span class="label">SENTIDO</span>
+            <span>{{vm.servico.pacote.ID_PRODUTO}}</span>
+        </md-whiteframe>
+        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="20" flex-gt-md="25" layout layout-align="center center">
             <span class="label">ID</span>
             <span>{{vm.servico.pacote.ID_PRODUTO}}</span>
         </md-whiteframe>
-        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="35" flex-gt-md="25" layout layout-align="center center">
+        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="25" flex-gt-md="25" layout layout-align="center center">
             <span class="label">QTD | UN</span>
             <span>{{vm.servico.pacote.QTD}} {{vm.servico.pacote.UNIDADE}}</span>
         </md-whiteframe>
-        <md-whiteframe ng-if="!vm.servico.erro.message" class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="35" flex-gt-md="90" layout layout-align="center center">
+        <md-whiteframe ng-if="!vm.servico.erro.message" class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="95" flex-gt-md="90" layout layout-align="center center">
             <span class="label">DESCRIÇÃO</span>         
             <span>{{vm.servico.pacote.DESCRICAO}}</span>
         </md-whiteframe>
-        <md-whiteframe ng-if="vm.servico.erro.message" class="md-whiteframe-1dp md-warn" flex-sm="45" flex-gt-sm="35" flex-gt-md="90" layout layout-align="center center">
+        <md-whiteframe ng-if="vm.servico.erro.message" class="md-whiteframe-1dp md-warn" flex-sm="45" flex-gt-sm="95" flex-gt-md="90" layout layout-align="center center">
             <span>{{vm.servico.erro.message}}</span>
         </md-whiteframe>
     </md-content>
