--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -1,9 +1,9 @@
-<section layout="column" flex layout-align="center center" id="leitor" class="login" ng-cloak>
+<section layout="column" flex layout-align="center center" id="leitor" class="login" ng-cloak ng-init="focusInput=true">
     <md-content layout-padding layout-fill layout-align="center center">
         <form name="projectForm" ng-submit="vm.consultaPacote(consulta.input);consulta.input=''" method="POST">
             <md-input-container class="md-block">
                 <label>LEITOR</label>
-                <input id="leitor" required md-no-asterisk name="description" ng-model="consulta.input" md-autofocus autofocus>
+                <input id="leitor" required md-no-asterisk name="description" ng-model="consulta.input"  focus-me="focusInput">
                 <div ng-messages="projectForm.description.$error">
                 </div>
             </md-input-container>   
