--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -1,4 +1,4 @@
-<section layout="column" flex layout-align="center center" id="leitor" class="login" ng-cloak ng-init="focusInput=true">
+<section layout="column" flex layout-align="center center" id="leitor" class="login" ng-cloak>
     <md-content layout-padding layout-fill layout-align="center center">
         <form name="projectForm" ng-submit="vm.consultaPacote(consulta.input);consulta.input=''" method="POST">
             <md-input-container class="md-block">
