--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Leitor Estoque 2.0</title>
     <link rel="stylesheet" href="./bower_components/angular-material/angular-material.css">
+    <link href="./bower_components/angular-material-data-table/dist/md-data-table.min.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="./style.css">
   </head>
   
@@ -20,6 +21,7 @@
   <script src="./bower_components/angular-animate/angular-animate.min.js"></script>
   <script src="./bower_components/angular-material/angular-material.min.js"></script>   
   <script src="./bower_components/angular-route/angular-route.min.js"></script>  
+  <script src="./bower_components/angular-material-data-table/dist/md-data-table.min.js"></script>  
   <script src="./app/app.js"></script>
   <script src="./app/config.js"></script>
   <script src="./app/services.js"></script>
