--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -41,14 +41,8 @@
                 <md-button ng-click="vm.modalListaPacotes()">testeDemo</md-button>  -->
     </md-content>
     <md-content layout-fill layout-xs="column" layout="row">
-        <div flex-xs flex-gt-xs="60" layout="column">
+        <div flex-xs flex-gt-xs="70" layout="column">
             <md-card md-theme="{{ showDarkTheme ? 'dark-orange' : 'default' }}" md-theme-watch>
-                <md-card-title>
-                    <!-- <md-card-title-text> -->
-                    <!-- <span class="md-headline">Card with image</span>
-            <span class="md-subhead">Extra Large</span> -->
-                    <!-- </md-card-title-text> -->
-                </md-card-title>
                 <md-card-content layout="column" flex>
                     <div class="card-media">
                         <md-table-container style="overflow-y: scroll;overflow-x: auto;"
@@ -81,7 +75,7 @@
                 </md-card-content>
             </md-card>
         </div>
-        <div flex-xs flex-gt-xs="40" layout="column">
+        <div flex-xs flex-gt-xs="30" layout="column">
             <md-card md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch>
                 <md-card-content layout="column" layout-align="space-between">
                     <md-whiteframe class="md-whiteframe-1dp" flex layout layout-align="center center">
@@ -99,7 +93,7 @@
                     <md-whiteframe ng-if="!vm.servico.erro.message" class="md-whiteframe-1dp md-primary" flex layout
                         layout-align="center center">
                         <span class="label">DESCRIÇÃO</span>
-                        <span>{{vm.servico.pacote.DESCRICAO}}</span>
+                        <span>{{vm.servico.pacote.DESCRICAO}}llallalalalal</span>
                     </md-whiteframe>
                     <md-whiteframe class="md-whiteframe-1dp md-warn" flex layout
                         layout-align="center center">
