--- a/app/features/home/home.1.html
+++ b/app/features/home/home.1.html
@@ -1,57 +1,106 @@
-<section layout="column" layout-align="center center" id="leitor" class="login" ng-cloak>
-    <md-content layout-padding flex layout-fill layout-align="center center">
-        <form name="projectForm" ng-submit="vm.consultaPacote(consulta.input);consulta.input=''" method="POST">
-            <md-input-container class="md-block">
-                <label>LEITOR</label>
-                <input id="leitor" required md-no-asterisk name="description" ng-model="consulta.input"  focus-me="focusInput">
-                <div ng-messages="projectForm.description.$error">
-                </div>
-            </md-input-container>  
-        </form>
-        <!-- <md-button ng-click="vm.modalDemonstrativo()">testeDemo</md-button> 
-        <md-button ng-click="vm.modalListaPacotes()">testeDemo</md-button>  -->
-    </md-content>
+<section ng-cloak>
+    <md-content layout-fill layout-align="center center">
+        <md-card md-theme="{{ showDarkTheme ? 'dark-orange' : 'default' }}" md-theme-watch>
+            <md-card-content layout="row">
+                <div class="card-media" flex>
+                    <form name="projectForm" ng-submit="vm.consultaPacote(consulta.input);consulta.input=''"
+                        method="POST">
+                        <md-input-container flex>
+                            <label>LEITOR</label>
+                            <input id="leitor" required md-no-asterisk name="description" ng-model="consulta.input"
+                                focus-me="focusInput">
+                            <div ng-messages="projectForm.description.$error">
+                            </div>
+                        </md-input-container>
+                        <md-input-container flex>
+                            <label>OPERADOR</label>
+                            <input ng-model="vm.servico.operador.NOME" readonly="readonly">
+                        </md-input-container>
+                        <md-input-container flex>
+                            <label>TRANSITO</label>
+                            <input ng-model="vm.servico.transito.ID_TRANSITO" readonly="readonly">
+                        </md-input-container>
+                        <md-input-container flex>
+                            <label>PEDIDO</label>
+                            <input ng-model="vm.servico.transito.DOCUMENTO" readonly="readonly">
+                        </md-input-container>
+                        <input type='submit' class="hide" />
+                    </form>
 
-    <md-content layout="row" flex layout-wrap layout-align="center center" layout-fill style="padding-bottom: 32px;">
-        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="15" flex-gt-md="15" layout layout-align="center center">
-            <span class="label">DATA</span>
-            <span>{{ vm.clock.time | date:' dd/MM/yy'}}</span>
-        </md-whiteframe>
-        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="15" flex-gt-md="15" layout layout-align="center center">
-            <span class="label">HORA</span>
-            <span>{{ vm.clock.time | date:'HH:mm:ss'}}</span>
-        </md-whiteframe>
-        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="30" flex-gt-md="30" layout layout-align="center center">
-            <span class="label">USUÁRIO</span>
-            <span>{{vm.servico.operador.NOME | uppercase}}</span>
-        </md-whiteframe>        
-        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="30" flex-gt-md="30" layout layout-align="center center">
-            <span class="label">DOCUMENTO</span>
-            <span>{{vm.servico.transito.ID_TRANSITO?vm.servico.transito.ID_TRANSITO:vm.servico.ordem.ID_OS?'OS'+vm.servico.ordem.ID_OS:''}}</span>
-        </md-whiteframe>
-        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="25" flex-gt-md="25" layout layout-align="center center">
-            <span class="label">{{vm.servico.volume.CODBAR?'VOLUME':'ENDERECO'}}</span>
-            <span>{{vm.servico.endereco.CODBAR || vm.servico.volume.CODBAR}}</span>
-        </md-whiteframe>
-        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="20" flex-gt-md="20" layout layout-align="center center">
-            <span class="label">SENTIDO</span>
-            <span>{{vm.servico.pacote.ID_PRODUTO}}</span>
-        </md-whiteframe>
-        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="20" flex-gt-md="20" layout layout-align="center center">
-            <span class="label">ID</span>
-            <span>{{vm.servico.pacote.ID_PRODUTO}}</span>
-        </md-whiteframe>
-        <md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="25" flex-gt-md="25" layout layout-align="center center">
-            <span class="label">QTD | UN</span>
-            <span>{{vm.servico.pacote.QTD}} {{vm.servico.pacote.UNIDADE}}</span>
-        </md-whiteframe>
-        <md-whiteframe ng-if="!vm.servico.erro.message" class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="95" flex-gt-md="95" layout layout-align="center center">
-            <span class="label">DESCRIÇÃO</span>         
-            <span>{{vm.servico.pacote.DESCRICAO}}</span>
-        </md-whiteframe>
-        <md-whiteframe ng-if="vm.servico.erro.message" class="md-whiteframe-1dp md-warn" flex-sm="45" flex-gt-sm="95" flex-gt-md="95" layout layout-align="center center">
-            <span>{{vm.servico.erro.message}}</span>
-        </md-whiteframe>
+                </div>
+            </md-card-content>
+        </md-card>
+
+
+        <!-- <md-button ng-click="vm.modalDemonstrativo()">testeDemo</md-button> 
+                        <md-button ng-click="vm.modalListaPacotes()">testeDemo</md-button>  -->
+    </md-content>
+    <md-content flex layout-fill layout-align="center center">
+
+        <!-- <md-button ng-click="vm.modalDemonstrativo()">testeDemo</md-button> 
+                <md-button ng-click="vm.modalListaPacotes()">testeDemo</md-button>  -->
+    </md-content>
+    <md-content layout-fill layout-xs="column" layout="row">
+        <div flex-xs flex-gt-xs="70" layout="column">
+            <md-card md-theme="{{ showDarkTheme ? 'dark-orange' : 'default' }}" md-theme-watch>
+                <md-card-content layout="column" flex>
+                    <div class="card-media">
+                        <md-table-container style="overflow-y: scroll;overflow-x: auto;"
+                            ng-style="{'height':mainScreen-287+'px'}">
+                            <table md-table ng-model="selected" md-progress="promise">
+                                <thead md-head fix-head md-order="query.order" md-on-reorder="getDesserts">
+                                    <tr md-row>
+                                        <th md-column  md-numeric><span>ID</span></th>
+                                        <th md-column md-numeric>QTD / OK </th>
+                                        <th md-column colspan="4" md-order-by="DESCRICAO"><span>Descrição</span></th>
+                                        <!-- <th md-column>Comentarios</th> -->
+                                    </tr>
+                                </thead>
+                                <tbody md-body>
+                                    <tr md-row md-select="dessert" md-select-id="name" md-auto-select
+                                        ng-repeat="dessert in desserts.data">
+                                        <td md-cell>{{dessert.CODPRO | number: 0}}</td>
+                                        <td md-cell>{{dessert.QTD | number: 0}} / {{dessert.QTDOK}}</td>
+                                        <td md-cell colspan="4">{{dessert.DESCRICAO}}</td>
+                                        <!-- <td md-cell ng-click="editComment($event, dessert)" ng-class="{'md-placeholder': !dessert.comment}">
+                              {{dessert.comment || 'Add a comment'}}
+                            </td> -->
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </md-table-container>
+                    </div>
+                    <!-- <md-card-actions layout="column">
+                    </md-card-actions> -->
+                </md-card-content>
+            </md-card>
+        </div>
+        <div flex-xs flex-gt-xs="30" layout="column">
+            <md-card md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch>
+                <md-card-content layout="column" layout-align="space-between">
+                    <md-whiteframe class="md-whiteframe-1dp" flex layout layout-align="center center">
+                        <span class="label">{{vm.servico.volume.CODBAR?'VOLUME':'ENDERECO'}}</span>
+                        <span>{{vm.servico.endereco.CODBAR || vm.servico.volume.CODBAR}}</span>
+                    </md-whiteframe>
+                    <md-whiteframe class="md-whiteframe-1dp" flex layout layout-align="center center">
+                        <span class="label">ID</span>
+                        <span>{{vm.servico.pacote.ID_PRODUTO}}</span>
+                    </md-whiteframe>
+                    <md-whiteframe class="md-whiteframe-1dp" flex layout layout-align="center center">
+                        <span class="label">QTD | UN</span>
+                        <span>{{vm.servico.pacote.QTD}} {{vm.servico.pacote.UNIDADE}}</span>
+                    </md-whiteframe>
+                    <md-whiteframe ng-if="!vm.servico.erro.message" class="md-whiteframe-1dp md-primary" flex layout
+                        layout-align="center center">
+                        <span class="label">DESCRIÇÃO</span>
+                        <span>{{vm.servico.pacote.DESCRICAO}}</span>
+                    </md-whiteframe>
+                    <md-whiteframe class="md-whiteframe-1dp md-warn" flex layout
+                        layout-align="center center">
+                        <span>{{vm.servico.erro.message}}</span>
+                    </md-whiteframe>
+                </md-card-content>
+            </md-card>
+        </div>
     </md-content>
 </section>
-
